@@ -43,6 +43,10 @@ REGISTER        ^pt[sy]/.*   IGNORE
 CHANGE          ^pt[sy]/.*   IGNORE
 CREATE          ^pt[sy]/.*   IGNORE
 DELETE          ^pt[sy]      IGNORE
+REGISTER        ^log         IGNORE
+CHANGE          ^log         IGNORE
+CREATE          ^log         IGNORE
+DELETE          ^log         IGNORE
 REGISTER        .*           COPY    /lib/dev-state/$devname $devpath
 CHANGE          .*           COPY    $devpath /lib/dev-state/$devname
 CREATE          .*           COPY    $devpath /lib/dev-state/$devname
